# epey-scraper

./: LICENSE  README.md  requirements.txt  setup.cfg
examples/: Akilli-telefonlar_08-11-2021_15-12-47.csv  Anakart-08-11-2021_15-06-30.csv  Bellek-ram_08-11-2021_15-10-41.csv  Ekran-karti-08-11-2021_15-08-17.csv  Fotograf-kamera-08-11-2021_15-07-54.csv  Islemci-08-11-2021_15-08-37.csv  Laptop_08-11-2021_15-09-16.csv  Monitor_08-11-2021_15-09-49.csv  Motosiklet_08-11-2021_15-10-16.csv  Oyun-konsolu_08-11-2021_15-09-06.csv  Tablet_08-11-2021_15-11-06.csv  Televizyon_08-11-2021_15-13-12.csv  Tuslu-telefon_08-11-2021_15-15-55.csv  Yazici_08-11-2021_15-16-10.csv
src/epey_scraper/: __main__.py  app.py
