[metadata]
name = epey-scraper
version = 0.1.0
author = Çağrı Özkurt
author_email = cagriozkurt@protonmail.com
description = A simple script to fetch product information from the Turkish e-commerce site epey.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cagriozkurt/epey-scraper
project_urls =
    Bug Tracker = https://github.com/cagriozkurt/epey-scraper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    beautifulsoup4 ==4.10.0
    httpx ==0.19.0
    pandas ==1.3.4
    simple-term-menu ==1.4.1
    tqdm ==4.62.3

[options.entry_points]
console_scripts =
    epey-scraper = epey_scraper.__main__:main

[options.packages.find]
where = src
